--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <div id='application_container'>
+      <img src='/logo-no-background.svg' id='application_logo' />
       <%= yield %>
     </div>
   </body>
