Adds workflow for submitting phone numbers for verification
Summary:
I removed some of the boiler plate code in favor of my own naming
scheme. The naming isn't perfect, but the actions tend more towards the
phone resource for how I designed the workflow. I expect to make a
sub-resource /phones/:id/verification_codes/:some-verify-action-name.
It would be pretty cool to replace the :id parameter with  friendly-id
that uses the actual phone number in the url.

Rails controller generators made this a breeze to get all the
boilerplate down.
`bin/rails g controller phones`

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div data-turbo="false">
+      <h1>
+        Verify Your US or Canadian Phone Number!
+      </h1>
+
+      <p class="alert alert-error">
+        <%= flash[:error] %>
+      </p>
+
+      <p class="alert alert-success">
+        <%= flash[:success] %>
+      </p>
+        <%= yield %>
+    </div>
   </body>
 </html>
