--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+.error-message {
+    color: red;
+}
+
+.field_with_errors {
+    display: inline;
+}
+
+.flash-success {
+    color: green;
+}
+
+.flash-alert {
+    color: red;
+}
