Add Configurations and FE Templates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="text-center" cz-shortcut-listen="true">
     <%= yield %>
   </body>
 </html>
