--- a/app/assets/stylesheets/verify_phone.scss
+++ b/app/assets/stylesheets/verify_phone.scss
@@ -11,28 +11,28 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin {
+.form-verification {
   width: 100%;
   max-width: 500px;
   padding: 15px;
   margin: auto;
 }
 
-.form-signin .checkbox {
+.form-verification .checkbox {
   font-weight: 400;
 }
 
-.form-signin .form-floating:focus-within {
+.form-verification .form-floating:focus-within {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
+.form-verification input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
+.form-verification input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
