Make things more restful

--- a/app/views/verify_phone/_form.html.erb
+++ b/app/views/verify_phone/_form.html.erb
@@ -1,3 +1,5 @@
-<%= form_with model: @phone_number, url: "/verification_code" do |f| %>
+<%= render partial: 'errors' %>
+
+<%= form_with model: @verify_phone do |f| %>
   <%= render partial: 'fields', locals: { f: f, verify: false } %>
 <% end %>
