--- a/app/views/verify_phone/create.turbo_stream.erb
+++ b/app/views/verify_phone/create.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.replace "verify", partial: 'verify_form', locals: { verify: true } %>
+<%= turbo_stream.replace "verify", partial: 'verify_form' %>
