--- a/app/views/verify_phone/index.html.erb
+++ b/app/views/verify_phone/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <h1>Verify Your Phone!</h1>
   <form class="row g-3" data-controller="verification">
     <div class="col-md-6 mb-3">
